# stitch-proj

./: .gitignore  CHANGELOG.md  README.md  benchmark_testing.md  build-release.sh  conftest.py  ddl.sql  dependencies.txt  document-dependencies.sh  emacs-setup.md  ingest_babel.py  instance-memory-tracker.sh  local_babel.py  master-config.shinc  pyproject.toml  requirements-dev.txt  requirements.txt  run-checks.sh  run-ingest-aws.sh  run-integration-tests.sh  run-normalize-kg2pre.sh  run-setup-venv.sh  setup-python312-with-pip3-in-ubuntu.shinc  setup-python313-with-pip3-in-ubuntu.shinc  setup-stitch.sh  test_babel_sqlite.py
benchmarks-archive/: benchmark-kg2pre-to-kg2c-edges.md  benchmarks-ingest-babel.md
docs/: benchmarks-ingest-babel.md
old-tools/: filter_drugchemical_for_test3.py  reingest_babel_conflations.py
stitch/: babel_schema.py  ingest_babel.py  kg2pre_to_kg2c_edges.py  kg2pre_to_kg2c_nodes.py  local_babel.py  normalize_kg2pre.py  normalize_kg2pre_jsonlines.py  row_counts.py  stitchutils.py
test-artifacts/: DrugChemical.txt  test-tiny.jsonl
tests/: test_ingest_babel.py  test_local_babel.py  test_stitchutils.py
tools/: check_types.py  clean.py  clean.sh  setup-i4i-instance.sh
