[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "F", "W", "I"]  # E=pycodestyle, F=pyflakes, W=warnings, I=isort
src = ["stitch"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stitch"
version = "0.0.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["stitch*"]
