[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "F", "W", "I"]  # E=pycodestyle, F=pyflakes, W=warnings, I=isort
src = ["stitch"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stitch-proj"
version = "0.1.3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bmt>=1.4.5",
    "htmllistparse>=0.6.1",
    "pandas>=2.2.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "build>=1.5.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
    "pylint>=3.3.8",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "twine>=6.2.0",
    "types-requests>=2.32.4.20250809",
    "vulture>=2.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stitch", "stitch.*"]
exclude = ["venv*", ".venv*", "build*", "dist*", "*.egg-info*"]
namespaces = false

[project.scripts]
ingest-babel = "stitch.ingest_babel:_main"
